src/src/objects/Sprint__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Sprint</label>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>